# denise

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/: lib.rs
tests/: test_denise.py  test_paula.py
