[package]
name = "paula"
version = "1.0.5"
edition = "2021"
description = "Python bindings for the Rust regex crate"
license = "MIT"

[lib]
name = "paula"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311", "generate-import-lib"] }
regex = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
